--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,16 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    padding-left: 25px;
+    padding-top: 25px;
+
 }
 
 .header-buttons {
     display: flex;
     flex-wrap: wrap;
     gap: 35px;
+    padding-top: 30px;
+    padding-right: 25px;
 
 }
