--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 * {
     font-family: 'Times New Roman', Times, serif;
+    outline: 2px solid red;
+}
+
+a {
+    text-decoration: none;
 }
 
 .header {
@@ -7,7 +12,9 @@
     flex-wrap: wrap;
     justify-content: space-between;
     padding-left: 25px;
-    padding-top: 25px;
+    margin-top: 20px;
+    align-items: center;
+    background-image: url(./images/plant-9.png);
 
 }
 
@@ -15,7 +22,6 @@
     display: flex;
     flex-wrap: wrap;
     gap: 35px;
-    padding-top: 30px;
     padding-right: 25px;
 
 }
