--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ a {
     padding-left: 25px;
     margin-top: 20px;
     align-items: center;
-    background-image: url(./images/plant-9.png);
+    background-image: url(../purestream/images/plant-9.png);
 
 }
 
