--- a/pages/gallery.css
+++ b/pages/gallery.css
@@ -3,31 +3,34 @@
    font-family: 'Times New Roman', Times, serif;
 }
 
-.header-text {
-    
-    align-self: center;
+.csizmadia-text {
     font-family: 'Times New Roman', Times, serif;
     font-weight: bold;
     font-size: 40px;
-}
+    margin-top: 25vh;
+    }
 
 .csizmadia {
-    background-image: url(../images/plant-9.png);
-    background-position: center;
-    background-repeat:no-repeat;
     display: flex;
-    flex-direction: column;
     flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
+    border-style:groove;
+    border-radius: 40px;
+    justify-content: space-between;
+    gap: 50px;
     flex-shrink: 0;
-    padding: 15px;
+    padding: 55px;
+    margin-right: 20px;
+    margin-top: 25px;
 }
 
 .images {
     display: flex;
     flex-wrap: wrap;
+    margin-left: 600px;
+    margin-top: -35vh;
+    padding: 15px;
     gap: 20px;
+    align-items: center;
     justify-content: center;
 }
 
