--- a/pages/contact.css
+++ b/pages/contact.css
@@ -6,6 +6,10 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
 .header {
     display: flex;
     flex-wrap: wrap;
