--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,14 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
+a::after {
+    text-transform: capitalize;
+}
+
 .header {
     display: flex;
     flex-wrap: wrap;
