--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 * {
     font-family: 'Times New Roman', Times, serif;
-  /* outline: 2px solid red; */
+   /* outline: 2px solid red; */
 }
 
 a {
@@ -11,9 +11,9 @@ a:hover {
     text-decoration: underline;
 }
 
-a::after {
-    text-transform: capitalize;
-}
+
+                                        /*HEADER*/
+
 
 .header {
     display: flex;
@@ -40,4 +40,32 @@ a::after {
     padding-top: 40px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 25px;
+}
+
+
+
+                                        /*FOOTER*/
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 50px;
+    margin-left: -8px;
+    padding-left: 50px;
+    padding-right: 50px;
+    background-image: url(../purestream/images/footer.png);
+    background-size: 100%;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    height: 120px;
+    border-top: groove;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-color: lightgreen;
+}
+
+.footer-logo {
+    width: 100px;
+    height: auto;
 }
