--- a/pages/gallery.css
+++ b/pages/gallery.css
@@ -47,30 +47,83 @@ a:hover {
     text-decoration: underline;
 }
 
+
+                        /* HEADER */
+
+
+
 .header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin: -8px;
     align-items: center;
+    width: 99vw;
+    height: 130px;
+    margin-top: -8px;
+    margin-left: -8px;
     background-image: url(../images/header.png);
     background-position: top;
     background-repeat: no-repeat;
     background-size: 100%;
+    border-bottom: groove;
+    border-bottom-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+    border-color: lightgreen;
 
 }
 
 .header-logo {
-    padding-top: 40px;
+    margin-top: -20px;
 }
 
 .header-buttons {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
     gap: 35px;
-    padding-right: 100px;
-    padding-top: 40px;
+    margin-right: 250px;
     font-family: 'Times New Roman', Times, serif;
     font-size: 25px;
+}
 
+
+                        /* FOOTER */
+
+
+.footer {
+    display: flex;
+    flex-wrap: wrap;
+    position: static;
+    bottom: 0;
+    left: 0;
+    width: 99vw;
+    margin-top: 25px;
+    margin-bottom: -8px;
+    margin-left: -8px;
+    justify-content: space-around;
+    align-items: center;
+    background-image: url(../images/footer.png);
+    background-size: 100%;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    height: 130px;
+    border-top: groove;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    border-color: lightgreen;
+}
+
+.contact {
+    margin-left: -60px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    flex-shrink: 1;    
+}
+
+.footer-logo {
+    width: 125px;
+    height: auto;
+    margin-right: 100px;
 }
